# ptlish

./: LICENSE  README.md  ptlish.cabal
Language/: Ptlish.hs
Language/Ptlish/: AST.hs  Lexer.x  Parser.y  Simplify.hs
tests/: parse.hs
